# 42-a-maze-ing

./: .flake8  .gitignore  Makefile  MazeGenerator.md  README.md  a_maze_ing.py  config.txt  maze.txt  mazegen-1.0.0-py3-none-any.whl  mypy.ini  output_maze.txt  pyproject.toml  requirements.txt
algo/: generate_maze.py  generation.py  logo.txt
mlx-2.2-py3-ubuntu-any/mlx-2.2.dist-info/: RECORD
src/: __init__.py  app.py  canvas.py  display.py  draw_maze.py  maze.py  window.py
src/algo/: __init__.py  file_manager.py  generate_maze.py  generation.py  hex_generation.py  maze_config.py  maze_controller.py  wall_help.py
src/controllers/: __init__.py  maze_controller.py
src/font/: !  a  b  f  j  k  m  p  q  r  u  w  x  z
src/fonts/: 100  101  102  103  104  105  110  111  115  118  121  34  35  39  40  41  42  43  44  45  46  47  48  49  50  51  52  53  54  55  56  57  58  59  60  61  62  63  92  95
src/maze/: __init__.py  file_manager.py  hex_generation.py  logo.txt  maze_config.py  maze_model.py  sqr_generation.py
src/mlx/: mlx.py
src/models/: __init__.py  maze_model.py
src/models/maze/: README.md  __init__.py  file_manager.py  generation.py  hex_generation.py  logo  maze_config.py  maze_model.py  sqr_generation.py
src/scenes/: __init__.py  base_scene.py  display_scene.py  game_scene.py  menu_scene.py  settings_scene.py
src/views/: __init__.py  canvas.py  maze_view.py  ui_components.py
src/views/renderers/: __init__.py  base_renderer.py  hex_renderer.py  square_renderer.py
