[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "A maze generator package"
readme = "src/models/maze/README.md"
authors = [
    { name = "acampion" },
    { name = "mpuillo"},
]
requires-python = ">=3.10"
dependencies = [
  "numpy",
]

[tool.setuptools]
packages = ["mazegen"]
package-dir = {"mazegen" = "src/models/maze"}

[tool.setuptools.package-data]
mazegen = ["logo"]
